# tdexchange

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt  tdexchange.sln
tdexchange/: README.md  exchange.cpp  exchange.h  id.h  interface.txt  logger.h  main.cpp  order.cpp  order.h  server.cpp  server.h  side.h  stdafx.h  tdexchange.vcxproj  tdexchange.vcxproj.filters  ticker.cpp  ticker.h  transaction.cpp  transaction.h  user.cpp  user.h
tdexchange/public/: index.html
